TypeSql/Parsing/TypeSqlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g 2013-01-20 17:17:01

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using TypeSql.Antlr.Runtime;
using TypeSql.Antlr.Runtime.Misc;


using TypeSql.Antlr.Runtime.Tree;
using RewriteRuleITokenStream = TypeSql.Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  TypeSql.Parsing 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
internal partial class TypeSqlParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANY", "DIGIT", "ID", "INPUT_TOKEN", "NAMESPACE", "NEWLINE", "OUTPUT_TOKEN", "SQL", "TYPE", "TYPESQL", "USING", "WHITESPACE", "'.'", "':'", "'?'", "'@'", "'['", "']'"
	};
	public const int EOF=-1;
	public const int T__16=16;
	public const int T__17=17;
	public const int T__18=18;
	public const int T__19=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int ANY=4;
	public const int DIGIT=5;
	public const int ID=6;
	public const int INPUT_TOKEN=7;
	public const int NAMESPACE=8;
	public const int NEWLINE=9;
	public const int OUTPUT_TOKEN=10;
	public const int SQL=11;
	public const int TYPE=12;
	public const int TYPESQL=13;
	public const int USING=14;
	public const int WHITESPACE=15;

	public TypeSqlParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public TypeSqlParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return TypeSqlParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_typesql();
	partial void LeaveRule_typesql();

	// $ANTLR start "typesql"
	// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:21:8: public typesql : ( usingNamespace )* sql -> ^( TYPESQL ( usingNamespace )* sql ) ;
	[GrammarRule("typesql")]
	public AstParserRuleReturnScope<object, IToken> typesql()
	{
		EnterRule_typesql();
		EnterRule("typesql", 1);
		TraceIn("typesql", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> usingNamespace1 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> sql2 = default(AstParserRuleReturnScope<object, IToken>);

		RewriteRuleSubtreeStream stream_sql=new RewriteRuleSubtreeStream(adaptor,"rule sql");
		RewriteRuleSubtreeStream stream_usingNamespace=new RewriteRuleSubtreeStream(adaptor,"rule usingNamespace");
		try { DebugEnterRule(GrammarFileName, "typesql");
		DebugLocation(21, 1);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:21:16: ( ( usingNamespace )* sql -> ^( TYPESQL ( usingNamespace )* sql ) )
			DebugEnterAlt(1);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:21:18: ( usingNamespace )* sql
			{
			DebugLocation(21, 18);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:21:18: ( usingNamespace )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==USING))
				{
					int LA1_2 = input.LA(2);

					if ((LA1_2==ID))
					{
						alt1 = 1;
					}


				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:21:18: usingNamespace
					{
					DebugLocation(21, 18);
					PushFollow(Follow._usingNamespace_in_typesql75);
					usingNamespace1=usingNamespace();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_usingNamespace.Add(usingNamespace1.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(21, 34);
			PushFollow(Follow._sql_in_typesql78);
			sql2=sql();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_sql.Add(sql2.Tree);


			{
			// AST REWRITE
			// elements: usingNamespace, sql
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 21:38: -> ^( TYPESQL ( usingNamespace )* sql )
			{
				DebugLocation(21, 41);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:21:41: ^( TYPESQL ( usingNamespace )* sql )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(21, 43);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(TYPESQL, "TYPESQL"), root_1);

				DebugLocation(21, 51);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:21:51: ( usingNamespace )*
				while ( stream_usingNamespace.HasNext )
				{
					DebugLocation(21, 51);
					adaptor.AddChild(root_1, stream_usingNamespace.NextTree());

				}
				stream_usingNamespace.Reset();
				DebugLocation(21, 67);
				adaptor.AddChild(root_1, stream_sql.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("typesql", 1);
			LeaveRule("typesql", 1);
			LeaveRule_typesql();
		}
		DebugLocation(23, 1);
		} finally { DebugExitRule(GrammarFileName, "typesql"); }
		return retval;

	}
	// $ANTLR end "typesql"

	partial void EnterRule_sql();
	partial void LeaveRule_sql();

	// $ANTLR start "sql"
	// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:25:1: sql : ( token )* -> ^( SQL ( token )* ) ;
	[GrammarRule("sql")]
	private AstParserRuleReturnScope<object, IToken> sql()
	{
		EnterRule_sql();
		EnterRule("sql", 2);
		TraceIn("sql", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> token3 = default(AstParserRuleReturnScope<object, IToken>);

		RewriteRuleSubtreeStream stream_token=new RewriteRuleSubtreeStream(adaptor,"rule token");
		try { DebugEnterRule(GrammarFileName, "sql");
		DebugLocation(25, 1);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:25:5: ( ( token )* -> ^( SQL ( token )* ) )
			DebugEnterAlt(1);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:25:7: ( token )*
			{
			DebugLocation(25, 7);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:25:7: ( token )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if (((LA2_0>=ANY && LA2_0<=21)))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:25:7: token
					{
					DebugLocation(25, 7);
					PushFollow(Follow._token_in_sql100);
					token3=token();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_token.Add(token3.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }



			{
			// AST REWRITE
			// elements: token
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 25:14: -> ^( SQL ( token )* )
			{
				DebugLocation(25, 17);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:25:17: ^( SQL ( token )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(25, 19);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(SQL, "SQL"), root_1);

				DebugLocation(25, 23);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:25:23: ( token )*
				while ( stream_token.HasNext )
				{
					DebugLocation(25, 23);
					adaptor.AddChild(root_1, stream_token.NextTree());

				}
				stream_token.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("sql", 2);
			LeaveRule("sql", 2);
			LeaveRule_sql();
		}
		DebugLocation(26, 1);
		} finally { DebugExitRule(GrammarFileName, "sql"); }
		return retval;

	}
	// $ANTLR end "sql"

	partial void EnterRule_usingNamespace();
	partial void LeaveRule_usingNamespace();

	// $ANTLR start "usingNamespace"
	// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:28:1: usingNamespace : USING nameSpace -> ^( USING nameSpace ) ;
	[GrammarRule("usingNamespace")]
	private AstParserRuleReturnScope<object, IToken> usingNamespace()
	{
		EnterRule_usingNamespace();
		EnterRule("usingNamespace", 3);
		TraceIn("usingNamespace", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken USING4 = default(IToken);
		AstParserRuleReturnScope<object, IToken> nameSpace5 = default(AstParserRuleReturnScope<object, IToken>);

		object USING4_tree = default(object);
		RewriteRuleITokenStream stream_USING=new RewriteRuleITokenStream(adaptor,"token USING");
		RewriteRuleSubtreeStream stream_nameSpace=new RewriteRuleSubtreeStream(adaptor,"rule nameSpace");
		try { DebugEnterRule(GrammarFileName, "usingNamespace");
		DebugLocation(28, 1);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:28:16: ( USING nameSpace -> ^( USING nameSpace ) )
			DebugEnterAlt(1);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:28:18: USING nameSpace
			{
			DebugLocation(28, 18);
			USING4=(IToken)Match(input,USING,Follow._USING_in_usingNamespace120); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_USING.Add(USING4);

			DebugLocation(28, 24);
			PushFollow(Follow._nameSpace_in_usingNamespace122);
			nameSpace5=nameSpace();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_nameSpace.Add(nameSpace5.Tree);


			{
			// AST REWRITE
			// elements: nameSpace, USING
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 28:34: -> ^( USING nameSpace )
			{
				DebugLocation(28, 37);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:28:37: ^( USING nameSpace )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(28, 39);
				root_1 = (object)adaptor.BecomeRoot(stream_USING.NextNode(), root_1);

				DebugLocation(28, 45);
				adaptor.AddChild(root_1, stream_nameSpace.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("usingNamespace", 3);
			LeaveRule("usingNamespace", 3);
			LeaveRule_usingNamespace();
		}
		DebugLocation(29, 1);
		} finally { DebugExitRule(GrammarFileName, "usingNamespace"); }
		return retval;

	}
	// $ANTLR end "usingNamespace"

	partial void EnterRule_nameSpace();
	partial void LeaveRule_nameSpace();

	// $ANTLR start "nameSpace"
	// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:31:1: nameSpace : ID ( '.' ID )* -> ^( NAMESPACE ID ( '.' ID )* ) ;
	[GrammarRule("nameSpace")]
	private AstParserRuleReturnScope<object, IToken> nameSpace()
	{
		EnterRule_nameSpace();
		EnterRule("nameSpace", 4);
		TraceIn("nameSpace", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken ID6 = default(IToken);
		IToken char_literal7 = default(IToken);
		IToken ID8 = default(IToken);

		object ID6_tree = default(object);
		object char_literal7_tree = default(object);
		object ID8_tree = default(object);
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_16=new RewriteRuleITokenStream(adaptor,"token 16");
		try { DebugEnterRule(GrammarFileName, "nameSpace");
		DebugLocation(31, 1);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:31:12: ( ID ( '.' ID )* -> ^( NAMESPACE ID ( '.' ID )* ) )
			DebugEnterAlt(1);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:31:14: ID ( '.' ID )*
			{
			DebugLocation(31, 14);
			ID6=(IToken)Match(input,ID,Follow._ID_in_nameSpace142); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_ID.Add(ID6);

			DebugLocation(31, 18);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:31:18: ( '.' ID )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==16))
				{
					int LA3_2 = input.LA(2);

					if ((LA3_2==ID))
					{
						alt3 = 1;
					}


				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:31:20: '.' ID
					{
					DebugLocation(31, 20);
					char_literal7=(IToken)Match(input,16,Follow._16_in_nameSpace147); if (state.failed) return retval; 
					if (state.backtracking == 0) stream_16.Add(char_literal7);

					DebugLocation(31, 24);
					ID8=(IToken)Match(input,ID,Follow._ID_in_nameSpace149); if (state.failed) return retval; 
					if (state.backtracking == 0) stream_ID.Add(ID8);


					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }



			{
			// AST REWRITE
			// elements: ID, 16, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 31:30: -> ^( NAMESPACE ID ( '.' ID )* )
			{
				DebugLocation(31, 33);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:31:33: ^( NAMESPACE ID ( '.' ID )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(31, 35);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(NAMESPACE, "NAMESPACE"), root_1);

				DebugLocation(31, 45);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(31, 49);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:31:49: ( '.' ID )*
				while ( stream_ID.HasNext||stream_16.HasNext )
				{
					DebugLocation(31, 51);
					adaptor.AddChild(root_1, stream_16.NextNode());
					DebugLocation(31, 55);
					adaptor.AddChild(root_1, stream_ID.NextNode());

				}
				stream_ID.Reset();
				stream_16.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("nameSpace", 4);
			LeaveRule("nameSpace", 4);
			LeaveRule_nameSpace();
		}
		DebugLocation(32, 1);
		} finally { DebugExitRule(GrammarFileName, "nameSpace"); }
		return retval;

	}
	// $ANTLR end "nameSpace"

	partial void EnterRule_token();
	partial void LeaveRule_token();

	// $ANTLR start "token"
	// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:34:1: token : ( outputToken | ( '@' ID ':' )=> inputToken | . );
	[GrammarRule("token")]
	private AstParserRuleReturnScope<object, IToken> token()
	{
		EnterRule_token();
		EnterRule("token", 5);
		TraceIn("token", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken wildcard11 = default(IToken);
		AstParserRuleReturnScope<object, IToken> outputToken9 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> inputToken10 = default(AstParserRuleReturnScope<object, IToken>);

		object wildcard11_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "token");
		DebugLocation(34, 1);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:34:8: ( outputToken | ( '@' ID ':' )=> inputToken | . )
			int alt4=3;
			try { DebugEnterDecision(4, false);
			switch (input.LA(1))
			{
			case ID:
				{
				int LA4_1 = input.LA(2);

				if ((LA4_1==17))
				{
					int LA4_5 = input.LA(3);

					if ((LA4_5==ID))
					{
						alt4 = 1;
					}
					else if ((LA4_5==EOF||(LA4_5>=ANY && LA4_5<=DIGIT)||(LA4_5>=INPUT_TOKEN && LA4_5<=21)))
					{
						alt4 = 3;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 4, 5, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else if ((LA4_1==EOF||(LA4_1>=ANY && LA4_1<=16)||(LA4_1>=18 && LA4_1<=21)))
				{
					alt4 = 3;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 4, 1, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 20:
				{
				int LA4_2 = input.LA(2);

				if ((LA4_2==ID))
				{
					int LA4_6 = input.LA(3);

					if ((LA4_6==21))
					{
						int LA4_9 = input.LA(4);

						if ((LA4_9==17))
						{
							int LA4_11 = input.LA(5);

							if ((LA4_11==ID))
							{
								alt4 = 1;
							}
							else if ((LA4_11==EOF||(LA4_11>=ANY && LA4_11<=DIGIT)||(LA4_11>=INPUT_TOKEN && LA4_11<=21)))
							{
								alt4 = 3;
							}
							else
							{
								if (state.backtracking>0) {state.failed=true; return retval;}
								NoViableAltException nvae = new NoViableAltException("", 4, 11, input);
								DebugRecognitionException(nvae);
								throw nvae;
							}
						}
						else if ((LA4_9==EOF||(LA4_9>=ANY && LA4_9<=16)||(LA4_9>=18 && LA4_9<=21)))
						{
							alt4 = 3;
						}
						else
						{
							if (state.backtracking>0) {state.failed=true; return retval;}
							NoViableAltException nvae = new NoViableAltException("", 4, 9, input);
							DebugRecognitionException(nvae);
							throw nvae;
						}
					}
					else if ((LA4_6==EOF||(LA4_6>=ANY && LA4_6<=20)))
					{
						alt4 = 3;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 4, 6, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else if ((LA4_2==EOF||(LA4_2>=ANY && LA4_2<=DIGIT)||(LA4_2>=INPUT_TOKEN && LA4_2<=21)))
				{
					alt4 = 3;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 4, 2, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 19:
				{
				int LA4_3 = input.LA(2);

				if ((LA4_3==ID))
				{
					int LA4_7 = input.LA(3);

					if ((LA4_7==17))
					{
						int LA4_10 = input.LA(4);

						if ((LA4_10==ID))
						{
							int LA4_12 = input.LA(5);

							if ((EvaluatePredicate(synpred1_TypeSql_fragment)))
							{
								alt4 = 2;
							}
							else if ((true))
							{
								alt4 = 3;
							}
							else
							{
								if (state.backtracking>0) {state.failed=true; return retval;}
								NoViableAltException nvae = new NoViableAltException("", 4, 12, input);
								DebugRecognitionException(nvae);
								throw nvae;
							}
						}
						else if ((LA4_10==EOF||(LA4_10>=ANY && LA4_10<=DIGIT)||(LA4_10>=INPUT_TOKEN && LA4_10<=21)))
						{
							alt4 = 3;
						}
						else
						{
							if (state.backtracking>0) {state.failed=true; return retval;}
							NoViableAltException nvae = new NoViableAltException("", 4, 10, input);
							DebugRecognitionException(nvae);
							throw nvae;
						}
					}
					else if ((LA4_7==EOF||(LA4_7>=ANY && LA4_7<=16)||(LA4_7>=18 && LA4_7<=21)))
					{
						alt4 = 3;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 4, 7, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else if ((LA4_3==EOF||(LA4_3>=ANY && LA4_3<=DIGIT)||(LA4_3>=INPUT_TOKEN && LA4_3<=21)))
				{
					alt4 = 3;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 4, 3, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case ANY:
			case DIGIT:
			case INPUT_TOKEN:
			case NAMESPACE:
			case NEWLINE:
			case OUTPUT_TOKEN:
			case SQL:
			case TYPE:
			case TYPESQL:
			case USING:
			case WHITESPACE:
			case 16:
			case 17:
			case 18:
			case 21:
				{
				alt4 = 3;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 4, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:34:11: outputToken
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(34, 11);
				PushFollow(Follow._outputToken_in_token183);
				outputToken9=outputToken();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, outputToken9.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:35:5: ( '@' ID ':' )=> inputToken
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(35, 21);
				PushFollow(Follow._inputToken_in_token199);
				inputToken10=inputToken();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, inputToken10.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\TypeSql.g:36:5: .
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(36, 5);

				wildcard11=(IToken)input.LT(1);

				MatchAny(input); if (state.failed) return retval;
				if (state.backtracking == 0) {
				wildcard11_tree = (object)adaptor.Create(wildcard11);
				adaptor.AddChild(root_0, wildcard11_tree);
				}


				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("token", 5);
			LeaveRule("token", 5);
			LeaveRule_token();
		}
		DebugLocation(37, 1);
		} finally { DebugExitRule(GrammarFileName, "token"); }
		return retval;

	}
	// $ANTLR end "token"

	partial void EnterRule_outputToken();
	partial void LeaveRule_outputToken();

